--- a/src/components/TodoResolve/styles.module.css
+++ b/src/components/TodoResolve/styles.module.css
@@ -47,6 +47,7 @@
   align-items: center;
   gap: 10px;
   width:400px;
+
 }
 
 /* ? checkbox input */
@@ -68,7 +69,14 @@
   font-weight: 500;
   margin: 0;
   cursor: pointer;
+  overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+   -webkit-line-clamp: 2; /* number of lines to show */
+           line-clamp: 2; 
+   -webkit-box-orient: vertical;
 }
+
 
 .iconsBox {
   display: flex;
