--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -1,5 +1,5 @@
 *{
-  text-align: center;
+  text-align: left;
 }
 
 .todoHeader {
@@ -19,9 +19,12 @@
   overflow: hidden;
   box-shadow: 0px 2px 10px #f2f2f2;
   margin: 2px auto;
-  max-width: 900px;
+ width:100%
 }
+.Searchbox {
 
+  width:50%;
+}
 
 .todoInfoBox {
   display: flex;
@@ -32,13 +35,7 @@
   border-inline: 1px solid #f0f0f0;
 }
 
-.todoInfoBox:first-child {
-  border-top: 1px solid #f0f0f0;
-}
 
-.todoInfoBox:nth-child(2n+1) {
-  background-color: #f0f0f0;
-}
 
 .todoTextBox {
   /* ? flex to let the element take the rest space between elements at same tree */
@@ -80,117 +77,117 @@
 
 .iconsBox {
   display: flex;
-  align-items: center;
+  margin-left: 83px;
   gap: 4px
 }
 
 .iconsBox svg {
-  width: 30px;
-  height: 30px;
-  padding: 5px;
-  border-radius: 4px;
+ 
   cursor: pointer;
 }
 
-.iconsBox [class*="editIcon"] {
-  color: #096d00c4;
-}
-
-.iconsBox [class*="editIcon"]:hover {
-  background-color: #096d00c4;
-  color: #fff;
-}
-
-.iconsBox [class*="deleteIcon"] {
-  color: #e90b16bd;
-}
-
-
-.iconsBox [class*="deleteIcon"]:hover {
-  background-color: #e90b16bd;
-  color: #fff;
-}
 
 .formBox {
-  padding: 10px 20px;
-  margin: 0;
-  border: 1px solid #f0f0f0;
+ 
   display: flex;
-  width: 756px;
+  margin-left: 17px;
+  margin-right: 182px;
+  background-color: rgba(255, 255, 255, 0.8);
 }
-svg Searchicon {
-  width:30px;
-  height:30px;
-  margin-left: 40px;
-  background-color: #ddd;
-  color: blue;
-}
+ 
+
+
 .containerformBox {
 
  padding: 16px;
     background-color: white;
+    text-align:left;
 }
 
-.containerformBox hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
-}
-.containerformBox  input[type=text],  input[type=text], textarea {
+
+.containerformBox  input[type=text], textarea {
   cursor: text;
     flex-grow: 1;
     outline: grey;
     padding: 15px;
     border-radius: 8px;
     border: 1px solid #e2e6e9;
-    color: #06062b;
-    color: var(--color-natural-black-default);
-    caret-color: #06062b;
-    caret-color: var(--color-natural-black-default);
+    
     width: 90%;
     margin: 5px 0 22px 0;
     display: inline-block;
 }
+ .containerformBox label {
+  font-size: 12px;
+ }
  
- 
-
+.buttonsave  {
+  margin-left: 78%;
+    margin-top: 12%;
+}
 
 .headerFormBox{
-  display: flex;
-  justify-content: space-between;
+  
   padding: 0 30px 0 15px;
+  align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 14px 14px 15px;
+    
+}
+.headerFormBox p {
+  font-size: 24px;
 }
 .formBox input[class*="textInput"] {
   padding: 8px;
-
+outline: lightgray;
   flex: 1;
   border-radius: 4px;
 
 border: 1px solid #e2e6e9;
-  margin-left:16px;
+  margin-left:5px;
   margin-right: 16px;
-  height: 17px;
-    margin-top: 1px;
+  
+    margin-top: 22px;
 
 }
+
 .headerFormBox h1{
   font-size:20px;
 }
 .mainformbox {
-  background-color: rgba(124, 128, 131, 0.71);
+  
     height: 100%;
-    width: 51%;
-    position:absolute;
+    width: 100%;
+  
     top: 0;
-    margin:-27px;
+   
     z-index: 1;
+    left:0;
+    bottom: 0;
+    right: 0;
+   
+   
+    position: fixed;
+   
+    
+    background-color: rgba(136, 130, 130, 0.877);
+   
+}
+.todocontainer{
+  margin-left: 22px;
+  width: 100%;
+  margin-top: 25px;
 }
 .popupBox{
-  height: 400px;
-  width: 50%;
-  background-color: white;
+  height: 330px;
+  width: 30%;
+  background-color: rgba(255, 255, 255, 0.8);
   position: absolute;
-  top: 10%;
-  right: 25%;
+  top: 4%;
+  right: 36%;
+ 
+  align-items: center;
 }
 .formBox .button[type="submit"] {
   border: 1px solid #f0f0f0;
@@ -200,8 +197,9 @@ border: 1px solid #e2e6e9;
   background-color: #0066ff;
   font-size: 16px;
   color: #fff;
-  margin-top:1px;
+  margin-top:22px;
   height:36px;
+  
 }
 .button{
   background-color: #26759e;
@@ -221,4 +219,12 @@ border: 1px solid #e2e6e9;
 }
 input:focus::placeholder,textarea:focus::placeholder{
   color:lightgrey;
+}
+.ab {
+ float:left; display:flex;
+    
+
+}
+.label label{
+  font-weight: bold;
 }
